<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DPR Kita</string>
    <string name="search_hint">Cari anggota DPR</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_header_view_pager">HeaderViewPager</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="read_more">Lebih Detail</string>
    <string name="title_activity_partai_fragment">PartaiFragment</string>
    <string name="lipsum">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="errorNetwork">Tidak ada koneksi</string>
    <string name="title_activity_list_dapil">Daftar Daerah Pemilihan</string>
    <string name="title_activity_list_komis">Komisi &amp; Alat Kelengkapan DPR</string>
    <string name="my_location">Lokasi Saya</string>
    <string name="filter">Pilih Dapil</string>
    <string name="data_kosong">Data Tidak Ditemukan</string>
    <string name="news_title">Berita Terkini</string>
    <string name="prompt_email">Email / Username</string>
    <string name="prompt_password">Kata Sandi</string>
    <string name="prompt_old_password">Kata Sandi Lama</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Invalid username or password!</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_report">Report</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="add_photo">Tambah Photo</string>
    <string name="home">Beranda</string>
    <string name="fraksi">Fraksi</string>
    <string name="komisi">Komisi</string>
    <string name="news">Berita</string>
    <string name="lapor">Laporkan aspirasi ini</string>
    <string name="settings">Settings</string>
    <string name="load_more"><![CDATA[Lihat Semua >>]]></string>
    <string name="title_activity_calendar">Pilih Tanggal</string>
    <string name="long_post">Post harus lebih dari 10 karakter</string>
    <string name="pilih_komisi">Pilih Komisi</string>
    <string name="pilih_ruang_lingkup">Pilih ruang linkup</string>
    <string name="body_email">Laporkas postingan ini karena : ...</string>
    <string name="laporkan_subject">Laporkan positing dari</string>
    <string name="email_receive">perludem@gmail.com</string>
    <string name="location">Anda berada di Dapil </string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="title_activity_tosactivy">TOSActivy</string>
    <string name="mix_login">Login</string>
    <string name="mix_login_screen">LOGIN SCREEN</string>
    <string name="mix_forgot">FORGOT PASSWORD</string>
    <string name="mix_forgot_screen">FORGOS PASSWORD SCREEN</string>
    <string name="mix_register_screen">REGISTER SCREEN</string>
    <string name="mix_home_list">HOME ANGGOTA DPR</string>
    <string name="mix_profile">PROFILE ANGGOTA</string>
    <string name="mix_like">DUKUNG ANGGOTA</string>
    <string name="mix_timeline">PODIUM ANGGOTA</string>
    <string name="mix_biodata">PROFILE ANGGOTA</string>
    <string name="mix_aspirasi_anggota">ASPIRASI ANGGOTA</string>
    <string name="mix_post">POST</string>
    <string name="mix_agenda">AGENDA DPR</string>
    <string name="mix_agenda_tanggal">PILIH TANGGAL AGENDA</string>
    <string name="mix_home_news">HOME NEWS</string>
    <string name="mix_selasar">SELASAR</string>
    <string name="mix_selasar_detail">DETAIL SELASAR</string>
    <string name="mix_news">NEWS</string>
    <string name="mix_aspirasi">HOME ASPIRASI</string>
    <string name="weekend">Masa Libur</string>
    <string name="reses">Masa Reses</string>
    <string name="action_filter">Filter</string>
    <string name="filter_aspirasi">Filter</string>


    <string-array name="arrayFilterAspirasi">
        <item>Semua Aspirasi</item>
        <item>Untuk Komisi</item>
        <item>Untuk Anggota</item>
        <item>Aspirasi Saya</item>
    </string-array>
    <string name="title_activity_comment">Komentar</string>
    <string name="mix_kabardpr">KABAR DPR</string>
    <string name="title_activity_dialog_message">Pesan</string>
    <string name="action_share">Bagikan</string>


    <!--Dynamic Share-->
    <string name="no_app_to_share">No app installed to share data of type %s!</string>
    <string name="no_share_type">No share type specified!</string>
    <string name="error_occurred">Sorry, an error occurred.</string>
    <string name="belum_ada_tanggapan">Belum ada tanggapan</string>
    <string name="data_tidak_tersedia">Data tidak tersedia</string>
    <string name="action_lapor">Laporkan</string>
    <string name="alert_logout">Apakah Anda yakin untuk logout?</string>
    <string name="update_profile">SIMPAN</string>
    <string name="profile">Profil</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_image_view">Aspirasi</string>
    <string name="lihat_image">IMAGE_ATTACH</string>
    <string name="update_password">Ganti Password</string>
    <string name="title_activity_update_password">UpdatePasswordActivity</string>
    <string name="confirm_prompt_password">Konfirmasi Password</string>
</resources>
