<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="id.gits.dprkita.activity.UpdatePasswordActivity">
    <include layout="@layout/toolbar_default" />

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/old_password"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_old_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true" />

        <android.widget.IconTextView
            android:id="@+id/btn_visibleoldpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:padding="4dp"
            android:text="{fa_eye}"
            android:textColor="@color/selector"
            android:textSize="22sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/new_password"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true" />

        <android.widget.IconTextView
            android:id="@+id/btn_visiblenewpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:padding="4dp"
            android:text="{fa_eye}"
            android:textColor="@color/selector"
            android:textSize="22sp" />



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/confirm_password"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_prompt_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true" />

        <android.widget.IconTextView
            android:id="@+id/btn_visibleconfirmpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:padding="4dp"
            android:text="{fa_eye}"
            android:textColor="@color/selector"
            android:textSize="22sp" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_update_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_button"
        android:text="@string/update_profile"
        android:textColor="@color/white"
        android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
