<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView

        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_logo"
                android:visibility="visible"
                android:layout_marginTop="20dp" />

            <!--<TextView-->
            <!--android:textSize="20sp"-->
            <!--android:textColor="@color/nliveo_red_colorPrimary"-->
            <!--android:fontFamily="sans-serif-condensed"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="DPR KITA"-->
            <!--android:textAppearance="@style/TextAppearance.FontPath.Bold" />-->

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Username atau password salah"
                android:textColor="#ffff6162"
                android:visibility="gone" />

            <EditText
                android:id="@+id/username"
                style="@style/MyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                style="@style/MyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/prompt_password"

                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/selector_button"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:padding="16dp"
                android:text="Lupa kata sandi?"
                android:textColor="@color/selector"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:padding="16dp"
                android:text="Belum punya Akun? Daftar disini »"
                android:textColor="@color/selector"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_lanjut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:padding="16dp"
                android:text="Lanjutkan tanpa login »"
                android:textColor="@color/selector"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>